--- a/機械学習体験.ipynb
+++ b/機械学習体験.ipynb
@@ -295,6 +295,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "885e90b7-5688-4486-9479-685b3ae0ab22",
+   "metadata": {},
+   "source": [
+    "機械学習超入門"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "1883e818-7af3-40c2-84cd-f30a5016a086",
@@ -467,6 +475,14 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4225330b-db1f-437e-9d38-581ff82a2633",
+   "metadata": {},
+   "source": [
+    "説明変数と正解データに分ける"
    ]
   },
   {
@@ -649,6 +665,7 @@
     }
    ],
    "source": [
+    "#説明変数\n",
     "xcol = ['身長', '体重', '年代']\n",
     "\n",
     "x = df[xcol]\n",
@@ -662,7 +679,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#教師データ\n",
     "t = df['派閥']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10146eed-e164-4311-884c-39c43843016d",
+   "metadata": {},
+   "source": [
+    "scikit-learnで学習"
    ]
   },
   {
@@ -1100,8 +1126,9 @@
     }
    ],
    "source": [
+    "#モデルの選択\n",
     "model = tree.DecisionTreeClassifier(random_state=0)\n",
-    "\n",
+    "#学習\n",
     "model.fit(x, t)"
    ]
   },
@@ -1131,8 +1158,9 @@
     }
    ],
    "source": [
+    "#予測させたいデータ\n",
     "shon = [[170, 87, 56]]\n",
-    "\n",
+    "#予測\n",
     "model.predict(taro)"
    ]
   },
@@ -1162,6 +1190,7 @@
     }
    ],
    "source": [
+    "#複数の予測\n",
     "sho=[175, 35, 63]\n",
     "masato=[178, 37, 65]\n",
     "\n",
@@ -1217,6 +1246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#学習したモデルの書き出し\n",
     "with open('./modelfile/kinotake.pkl', 'wb') as f:\n",
     "    pickle.dump(model, f)"
    ]
@@ -1228,6 +1258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#書き出したモデルの読み込み\n",
     "with open('./modelfile/kinotake.pkl', 'rb') as f:\n",
     "    modelread = pickle.load(f)"
    ]
@@ -1258,6 +1289,7 @@
     }
    ],
    "source": [
+    "#読み込んだモデルで予測\n",
     "modelread.predict([sho])"
    ]
   },
