--- a/06映画の興行収入の予測.ipynb
+++ b/06映画の興行収入の予測.ipynb
@@ -90,13 +90,14 @@
     }
    ],
    "source": [
+    "#データファイルを読み込み表示\n",
     "df = pd.read_csv('./datafile/cinema.csv')\n",
     "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e9a1ed4b-4107-463a-8055-e0b287d9a3c8",
    "metadata": {},
    "outputs": [
@@ -112,18 +113,20 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#欠損データとしてNULL値が存在するか表示\n",
+    "#SNS1,actorに欠損値があった\n",
     "df.isnull().any(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c771ac95-0760-4892-a80b-75dbc974e220",
    "metadata": {},
    "outputs": [
@@ -139,20 +142,21 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#NULL値を平均値で補完\n",
     "df2 = df.fillna(df.mean())\n",
-    "\n",
+    "#補完後に欠損データがないか調べる\n",
     "df2.isnull().any(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "293c6449-0ebb-42e2-9620-56ef45d86599",
    "metadata": {},
    "outputs": [],
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "8f5a7222-7580-42c9-93e8-a187de6d93d5",
    "metadata": {},
    "outputs": [
@@ -172,7 +176,7 @@
        "<Axes: xlabel='SNS2', ylabel='sales'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,6 +192,7 @@
     }
    ],
    "source": [
+    "#SNS1と興行収入の散布図\n",
     "df2.plot(kind='scatter', x= 'SNS2', y='sales')"
    ]
   },
@@ -249,6 +254,7 @@
     }
    ],
    "source": [
+    "#それぞれの説明変数と目的変数の散布図\n",
     "df2.plot(kind='scatter', x= 'SNS1', y='sales')\n",
     "df2.plot(kind='scatter', x= 'SNS2', y='sales')\n",
     "df2.plot(kind='scatter', x= 'actor', y='sales')\n",
@@ -257,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "94232682-4fdd-4135-baf2-b2e1f8e04164",
    "metadata": {},
    "outputs": [
@@ -303,16 +309,18 @@
     }
    ],
    "source": [
+    "#それぞれの説明変数と目的変数の散布図をfor文で表示\n",
     "for name in df.columns:\n",
+    "    #データフレームの列名がcinema_id、salesの場合は描画しないでそのまま続ける\n",
     "    if name=='cinema_id' or name=='sales':\n",
     "        continue\n",
-    "\n",
+    "    #IF文にかからなかった列名と目的変数（sales）の散布図\n",
     "    df2.plot(kind='scatter', x=name, y='sales')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "611dc682-1d31-4b60-8d67-c0f210febb66",
    "metadata": {},
    "outputs": [
@@ -322,16 +330,18 @@
        "(99, 6)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#外れ値を特定する\n",
     "no = df2[(df2['SNS2'] > 1000) & (df2['sales'] < 8500)].index\n",
     "no\n",
-    "\n",
+    "#外れ値を含む行を削除\n",
     "df3 = df2.drop(no, axis=0)\n",
+    "#削除されたか確認\n",
     "df3.shape"
    ]
   },
@@ -363,6 +373,7 @@
     }
    ],
    "source": [
+    "#SNS2とsalesの散布図\n",
     "df3.plot(kind='scatter', x= 'SNS2', y='sales')"
    ]
   },
@@ -644,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "6758053c-3623-4bf5-93b8-5826134b1a9e",
    "metadata": {},
    "outputs": [
@@ -696,18 +707,19 @@
        "30       1855  149.0  1200  8173.096892         0   8000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#SNS2の外れ値を特定する\n",
     "df[(df['SNS2'] > 1000) & (df2['sales'] < 8500)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "c6c9ea3e-c39b-44c0-ab0f-2a87395c912f",
    "metadata": {},
    "outputs": [
@@ -717,19 +729,20 @@
        "Index([30], dtype='int64')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#外れ値を変数に入れ確認\n",
     "no = df[(df['SNS2'] > 1000) & (df2['sales'] < 8500)].index\n",
     "no"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "bf9d4d85-a9fb-41f8-ba64-3127604a6ece",
    "metadata": {},
    "outputs": [
@@ -739,31 +752,34 @@
        "Index(['cinema_id', 'SNS1', 'SNS2', 'actor', 'original', 'sales'], dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#\n",
     "df3.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "305a79ac-2e21-414d-8871-f261632925fa",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#説明変数を列に\n",
     "col = ['SNS1', 'SNS2', 'actor', 'original']\n",
-    "\n",
+    "#説明変数の表\n",
     "x = df3[col]\n",
+    "#目的変数を教師データに\n",
     "y = df3['sales']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "962c6902-88e8-40a9-a0b8-aa9d46439a40",
    "metadata": {},
    "outputs": [
@@ -773,12 +789,13 @@
        "158.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#2行目のSNS1を確認\n",
     "df3.loc[2, 'SNS1']"
    ]
   },
@@ -846,16 +863,17 @@
     }
    ],
    "source": [
+    "#特定の列番号を複数指定\n",
     "index = [2,4,6]\n",
-    "\n",
+    "#列名を指定\n",
     "col = ['SNS1', 'actor']\n",
-    "\n",
+    "#行番号と列名を指定し表示\n",
     "df3.loc[index, col]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "c74809de-8785-4953-986a-8e5200bbd3c7",
    "metadata": {},
    "outputs": [
@@ -865,30 +883,33 @@
        "[20, 30]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#スライスの動きを確認\n",
     "sample = [10,20,30,40]\n",
     "sample[1:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "6700e088-3ef9-498d-8187-4dac6bb24b52",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#SNS1～originalまでの列を説明変数に\n",
     "x = df3.loc[:, 'SNS1':'original']\n",
+    "#教師データにsales\n",
     "t = df3['sales']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "8eee381a-689d-42d4-809d-43769a6cd559",
    "metadata": {},
    "outputs": [],
@@ -898,17 +919,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "id": "1dd1f89a-fd3d-467e-b374-a144bb773132",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#訓練データとテストデータ（２０％）に分割\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, t, test_size=0.2, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "4a72f1ce-790c-409d-92fd-80f38e108e01",
    "metadata": {},
    "outputs": [],
@@ -918,17 +940,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "6bf46848-58ab-4aa2-ab70-163703b79e10",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#線形モデルを使用\n",
     "model = LinearRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "c504219e-bbfd-4ebd-9043-234231d3bbc9",
    "metadata": {},
    "outputs": [
@@ -1345,18 +1368,19 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#訓練データで学習\n",
     "model.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "8a269b1b-ba8f-48a7-b15a-16203e92e194",
    "metadata": {},
    "outputs": [
@@ -1374,20 +1398,21 @@
        "array([6874.109753])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#学習したモデルに予測させるデータを作成(numpy配列)\n",
     "new = [[150, 700, 300, 0]]\n",
-    "\n",
+    "#予測させる\n",
     "model.predict(new)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "6724a207-f5d8-43a8-981d-0d8e9a9b987c",
    "metadata": {},
    "outputs": [
@@ -1397,18 +1422,19 @@
        "0.7903881596570095"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#テストデータを使ってモデルのスコアを調べる\n",
     "model.score(x_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "1b464127-cfe9-4e72-86ed-4eccb8354641",
    "metadata": {},
    "outputs": [
@@ -1418,22 +1444,23 @@
        "277.12236964086225"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#MAEのライブラリ（平均絶対誤差）\n",
     "from sklearn.metrics import mean_absolute_error\n",
-    "\n",
+    "#テストデータを使って予測\n",
     "pred = model.predict(x_test)\n",
-    "\n",
+    "#予測データと教師データで平均絶対誤差の計算\n",
     "mean_absolute_error(y_pred=pred, y_true=y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "id": "5b0b91eb-0984-468d-80dc-46c26720d11b",
    "metadata": {},
    "outputs": [
@@ -1443,22 +1470,24 @@
        "0.7903881596570095"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#モデルの精度を調べる\n",
     "model.score(x_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "id": "9d7a4c66-8b61-41c2-b07f-bdafac490f5b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#モデルの保存\n",
     "import pickle\n",
     "\n",
     "with open('./modelfile/cinema.pkl', 'wb') as f:\n",
@@ -1467,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "id": "722bbb91-3542-4fdd-aeac-a8f9c71abee4",
    "metadata": {},
    "outputs": [
@@ -1481,13 +1510,15 @@
     }
    ],
    "source": [
+    "#計算式の係数の表示\n",
     "print(model.coef_)\n",
+    "#計算式の切片表示\n",
     "print(model.intercept_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "id": "72df6135-36d4-4531-8c67-9cb4a2562689",
    "metadata": {},
    "outputs": [
@@ -1544,14 +1575,17 @@
        "original  213.955845"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#回帰式の係数でデータフレームを作成し\n",
     "tmp = pd.DataFrame(model.coef_)\n",
+    "#訓練データ（説明変数名）の列をインデックスに設定\n",
     "tmp.index = x_train.columns\n",
+    "#それぞれの説明変数ごとの係数表表示\n",
     "tmp"
    ]
   },
