--- a/LightGBMでボストン住宅価格予想.ipynb
+++ b/LightGBMでボストン住宅価格予想.ipynb
@@ -228,58 +228,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "id": "f480d01a-6638-49f5-b8f4-a7b17f885fb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>crim</th>\n",
+       "      <th>zn</th>\n",
+       "      <th>indus</th>\n",
+       "      <th>chas</th>\n",
+       "      <th>nox</th>\n",
+       "      <th>rm</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dis</th>\n",
+       "      <th>rad</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>ptratio</th>\n",
+       "      <th>b</th>\n",
+       "      <th>lstat</th>\n",
+       "      <th>medv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>crim</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.200469</td>\n",
+       "      <td>0.406583</td>\n",
+       "      <td>-0.055892</td>\n",
+       "      <td>0.420972</td>\n",
+       "      <td>-0.219247</td>\n",
+       "      <td>0.352734</td>\n",
+       "      <td>-0.379670</td>\n",
+       "      <td>0.625505</td>\n",
+       "      <td>0.582764</td>\n",
+       "      <td>0.289946</td>\n",
+       "      <td>-0.385064</td>\n",
+       "      <td>0.455621</td>\n",
+       "      <td>-0.388305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zn</th>\n",
+       "      <td>-0.200469</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.533828</td>\n",
+       "      <td>-0.042697</td>\n",
+       "      <td>-0.516604</td>\n",
+       "      <td>0.311991</td>\n",
+       "      <td>-0.569537</td>\n",
+       "      <td>0.664408</td>\n",
+       "      <td>-0.311948</td>\n",
+       "      <td>-0.314563</td>\n",
+       "      <td>-0.391679</td>\n",
+       "      <td>0.175520</td>\n",
+       "      <td>-0.412995</td>\n",
+       "      <td>0.360445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>indus</th>\n",
+       "      <td>0.406583</td>\n",
+       "      <td>-0.533828</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.062938</td>\n",
+       "      <td>0.763651</td>\n",
+       "      <td>-0.391676</td>\n",
+       "      <td>0.644779</td>\n",
+       "      <td>-0.708027</td>\n",
+       "      <td>0.595129</td>\n",
+       "      <td>0.720760</td>\n",
+       "      <td>0.383248</td>\n",
+       "      <td>-0.356977</td>\n",
+       "      <td>0.603800</td>\n",
+       "      <td>-0.483725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chas</th>\n",
+       "      <td>-0.055892</td>\n",
+       "      <td>-0.042697</td>\n",
+       "      <td>0.062938</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.091203</td>\n",
+       "      <td>0.091251</td>\n",
+       "      <td>0.086518</td>\n",
+       "      <td>-0.099176</td>\n",
+       "      <td>-0.007368</td>\n",
+       "      <td>-0.035587</td>\n",
+       "      <td>-0.121515</td>\n",
+       "      <td>0.048788</td>\n",
+       "      <td>-0.053929</td>\n",
+       "      <td>0.175260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nox</th>\n",
+       "      <td>0.420972</td>\n",
+       "      <td>-0.516604</td>\n",
+       "      <td>0.763651</td>\n",
+       "      <td>0.091203</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.302188</td>\n",
+       "      <td>0.731470</td>\n",
+       "      <td>-0.769230</td>\n",
+       "      <td>0.611441</td>\n",
+       "      <td>0.668023</td>\n",
+       "      <td>0.188933</td>\n",
+       "      <td>-0.380051</td>\n",
+       "      <td>0.590879</td>\n",
+       "      <td>-0.427321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rm</th>\n",
+       "      <td>-0.219247</td>\n",
+       "      <td>0.311991</td>\n",
+       "      <td>-0.391676</td>\n",
+       "      <td>0.091251</td>\n",
+       "      <td>-0.302188</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.240265</td>\n",
+       "      <td>0.205246</td>\n",
+       "      <td>-0.209847</td>\n",
+       "      <td>-0.292048</td>\n",
+       "      <td>-0.355501</td>\n",
+       "      <td>0.128069</td>\n",
+       "      <td>-0.613808</td>\n",
+       "      <td>0.695360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>0.352734</td>\n",
+       "      <td>-0.569537</td>\n",
+       "      <td>0.644779</td>\n",
+       "      <td>0.086518</td>\n",
+       "      <td>0.731470</td>\n",
+       "      <td>-0.240265</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.747881</td>\n",
+       "      <td>0.456022</td>\n",
+       "      <td>0.506456</td>\n",
+       "      <td>0.261515</td>\n",
+       "      <td>-0.273534</td>\n",
+       "      <td>0.602339</td>\n",
+       "      <td>-0.376955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dis</th>\n",
+       "      <td>-0.379670</td>\n",
+       "      <td>0.664408</td>\n",
+       "      <td>-0.708027</td>\n",
+       "      <td>-0.099176</td>\n",
+       "      <td>-0.769230</td>\n",
+       "      <td>0.205246</td>\n",
+       "      <td>-0.747881</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.494588</td>\n",
+       "      <td>-0.534432</td>\n",
+       "      <td>-0.232471</td>\n",
+       "      <td>0.291512</td>\n",
+       "      <td>-0.496996</td>\n",
+       "      <td>0.249929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rad</th>\n",
+       "      <td>0.625505</td>\n",
+       "      <td>-0.311948</td>\n",
+       "      <td>0.595129</td>\n",
+       "      <td>-0.007368</td>\n",
+       "      <td>0.611441</td>\n",
+       "      <td>-0.209847</td>\n",
+       "      <td>0.456022</td>\n",
+       "      <td>-0.494588</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.910228</td>\n",
+       "      <td>0.464741</td>\n",
+       "      <td>-0.444413</td>\n",
+       "      <td>0.488676</td>\n",
+       "      <td>-0.381626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tax</th>\n",
+       "      <td>0.582764</td>\n",
+       "      <td>-0.314563</td>\n",
+       "      <td>0.720760</td>\n",
+       "      <td>-0.035587</td>\n",
+       "      <td>0.668023</td>\n",
+       "      <td>-0.292048</td>\n",
+       "      <td>0.506456</td>\n",
+       "      <td>-0.534432</td>\n",
+       "      <td>0.910228</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.460853</td>\n",
+       "      <td>-0.441808</td>\n",
+       "      <td>0.543993</td>\n",
+       "      <td>-0.468536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ptratio</th>\n",
+       "      <td>0.289946</td>\n",
+       "      <td>-0.391679</td>\n",
+       "      <td>0.383248</td>\n",
+       "      <td>-0.121515</td>\n",
+       "      <td>0.188933</td>\n",
+       "      <td>-0.355501</td>\n",
+       "      <td>0.261515</td>\n",
+       "      <td>-0.232471</td>\n",
+       "      <td>0.464741</td>\n",
+       "      <td>0.460853</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.177383</td>\n",
+       "      <td>0.374044</td>\n",
+       "      <td>-0.507787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>-0.385064</td>\n",
+       "      <td>0.175520</td>\n",
+       "      <td>-0.356977</td>\n",
+       "      <td>0.048788</td>\n",
+       "      <td>-0.380051</td>\n",
+       "      <td>0.128069</td>\n",
+       "      <td>-0.273534</td>\n",
+       "      <td>0.291512</td>\n",
+       "      <td>-0.444413</td>\n",
+       "      <td>-0.441808</td>\n",
+       "      <td>-0.177383</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.366087</td>\n",
+       "      <td>0.333461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lstat</th>\n",
+       "      <td>0.455621</td>\n",
+       "      <td>-0.412995</td>\n",
+       "      <td>0.603800</td>\n",
+       "      <td>-0.053929</td>\n",
+       "      <td>0.590879</td>\n",
+       "      <td>-0.613808</td>\n",
+       "      <td>0.602339</td>\n",
+       "      <td>-0.496996</td>\n",
+       "      <td>0.488676</td>\n",
+       "      <td>0.543993</td>\n",
+       "      <td>0.374044</td>\n",
+       "      <td>-0.366087</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.737663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>medv</th>\n",
+       "      <td>-0.388305</td>\n",
+       "      <td>0.360445</td>\n",
+       "      <td>-0.483725</td>\n",
+       "      <td>0.175260</td>\n",
+       "      <td>-0.427321</td>\n",
+       "      <td>0.695360</td>\n",
+       "      <td>-0.376955</td>\n",
+       "      <td>0.249929</td>\n",
+       "      <td>-0.381626</td>\n",
+       "      <td>-0.468536</td>\n",
+       "      <td>-0.507787</td>\n",
+       "      <td>0.333461</td>\n",
+       "      <td>-0.737663</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[ 1.        , -0.20046922,  0.40658341, -0.05589158,  0.42097171,\n",
-       "        -0.2192467 ,  0.35273425, -0.37967009,  0.62550515,  0.58276431,\n",
-       "         0.28994558, -0.38506394,  0.45562148, -0.38830461],\n",
-       "       [-0.20046922,  1.        , -0.53382819, -0.04269672, -0.51660371,\n",
-       "         0.31199059, -0.56953734,  0.66440822, -0.31194783, -0.31456332,\n",
-       "        -0.39167855,  0.17552032, -0.41299457,  0.36044534],\n",
-       "       [ 0.40658341, -0.53382819,  1.        ,  0.06293803,  0.76365145,\n",
-       "        -0.39167585,  0.64477851, -0.70802699,  0.59512927,  0.72076018,\n",
-       "         0.38324756, -0.35697654,  0.60379972, -0.48372516],\n",
-       "       [-0.05589158, -0.04269672,  0.06293803,  1.        ,  0.09120281,\n",
-       "         0.09125123,  0.08651777, -0.09917578, -0.00736824, -0.03558652,\n",
-       "        -0.12151517,  0.04878848, -0.0539293 ,  0.17526018],\n",
-       "       [ 0.42097171, -0.51660371,  0.76365145,  0.09120281,  1.        ,\n",
-       "        -0.30218819,  0.7314701 , -0.76923011,  0.61144056,  0.6680232 ,\n",
-       "         0.18893268, -0.38005064,  0.59087892, -0.42732077],\n",
-       "       [-0.2192467 ,  0.31199059, -0.39167585,  0.09125123, -0.30218819,\n",
-       "         1.        , -0.24026493,  0.20524621, -0.20984667, -0.29204783,\n",
-       "        -0.35550149,  0.12806864, -0.61380827,  0.69535995],\n",
-       "       [ 0.35273425, -0.56953734,  0.64477851,  0.08651777,  0.7314701 ,\n",
-       "        -0.24026493,  1.        , -0.74788054,  0.45602245,  0.50645559,\n",
-       "         0.26151501, -0.27353398,  0.60233853, -0.37695457],\n",
-       "       [-0.37967009,  0.66440822, -0.70802699, -0.09917578, -0.76923011,\n",
-       "         0.20524621, -0.74788054,  1.        , -0.49458793, -0.53443158,\n",
-       "        -0.23247054,  0.29151167, -0.49699583,  0.24992873],\n",
-       "       [ 0.62550515, -0.31194783,  0.59512927, -0.00736824,  0.61144056,\n",
-       "        -0.20984667,  0.45602245, -0.49458793,  1.        ,  0.91022819,\n",
-       "         0.46474118, -0.44441282,  0.48867633, -0.38162623],\n",
-       "       [ 0.58276431, -0.31456332,  0.72076018, -0.03558652,  0.6680232 ,\n",
-       "        -0.29204783,  0.50645559, -0.53443158,  0.91022819,  1.        ,\n",
-       "         0.46085304, -0.44180801,  0.54399341, -0.46853593],\n",
-       "       [ 0.28994558, -0.39167855,  0.38324756, -0.12151517,  0.18893268,\n",
-       "        -0.35550149,  0.26151501, -0.23247054,  0.46474118,  0.46085304,\n",
-       "         1.        , -0.1773833 ,  0.37404432, -0.50778669],\n",
-       "       [-0.38506394,  0.17552032, -0.35697654,  0.04878848, -0.38005064,\n",
-       "         0.12806864, -0.27353398,  0.29151167, -0.44441282, -0.44180801,\n",
-       "        -0.1773833 ,  1.        , -0.3660869 ,  0.33346082],\n",
-       "       [ 0.45562148, -0.41299457,  0.60379972, -0.0539293 ,  0.59087892,\n",
-       "        -0.61380827,  0.60233853, -0.49699583,  0.48867633,  0.54399341,\n",
-       "         0.37404432, -0.3660869 ,  1.        , -0.73766273],\n",
-       "       [-0.38830461,  0.36044534, -0.48372516,  0.17526018, -0.42732077,\n",
-       "         0.69535995, -0.37695457,  0.24992873, -0.38162623, -0.46853593,\n",
-       "        -0.50778669,  0.33346082, -0.73766273,  1.        ]])"
+       "             crim        zn     indus      chas       nox        rm       age  \\\n",
+       "crim     1.000000 -0.200469  0.406583 -0.055892  0.420972 -0.219247  0.352734   \n",
+       "zn      -0.200469  1.000000 -0.533828 -0.042697 -0.516604  0.311991 -0.569537   \n",
+       "indus    0.406583 -0.533828  1.000000  0.062938  0.763651 -0.391676  0.644779   \n",
+       "chas    -0.055892 -0.042697  0.062938  1.000000  0.091203  0.091251  0.086518   \n",
+       "nox      0.420972 -0.516604  0.763651  0.091203  1.000000 -0.302188  0.731470   \n",
+       "rm      -0.219247  0.311991 -0.391676  0.091251 -0.302188  1.000000 -0.240265   \n",
+       "age      0.352734 -0.569537  0.644779  0.086518  0.731470 -0.240265  1.000000   \n",
+       "dis     -0.379670  0.664408 -0.708027 -0.099176 -0.769230  0.205246 -0.747881   \n",
+       "rad      0.625505 -0.311948  0.595129 -0.007368  0.611441 -0.209847  0.456022   \n",
+       "tax      0.582764 -0.314563  0.720760 -0.035587  0.668023 -0.292048  0.506456   \n",
+       "ptratio  0.289946 -0.391679  0.383248 -0.121515  0.188933 -0.355501  0.261515   \n",
+       "b       -0.385064  0.175520 -0.356977  0.048788 -0.380051  0.128069 -0.273534   \n",
+       "lstat    0.455621 -0.412995  0.603800 -0.053929  0.590879 -0.613808  0.602339   \n",
+       "medv    -0.388305  0.360445 -0.483725  0.175260 -0.427321  0.695360 -0.376955   \n",
+       "\n",
+       "              dis       rad       tax   ptratio         b     lstat      medv  \n",
+       "crim    -0.379670  0.625505  0.582764  0.289946 -0.385064  0.455621 -0.388305  \n",
+       "zn       0.664408 -0.311948 -0.314563 -0.391679  0.175520 -0.412995  0.360445  \n",
+       "indus   -0.708027  0.595129  0.720760  0.383248 -0.356977  0.603800 -0.483725  \n",
+       "chas    -0.099176 -0.007368 -0.035587 -0.121515  0.048788 -0.053929  0.175260  \n",
+       "nox     -0.769230  0.611441  0.668023  0.188933 -0.380051  0.590879 -0.427321  \n",
+       "rm       0.205246 -0.209847 -0.292048 -0.355501  0.128069 -0.613808  0.695360  \n",
+       "age     -0.747881  0.456022  0.506456  0.261515 -0.273534  0.602339 -0.376955  \n",
+       "dis      1.000000 -0.494588 -0.534432 -0.232471  0.291512 -0.496996  0.249929  \n",
+       "rad     -0.494588  1.000000  0.910228  0.464741 -0.444413  0.488676 -0.381626  \n",
+       "tax     -0.534432  0.910228  1.000000  0.460853 -0.441808  0.543993 -0.468536  \n",
+       "ptratio -0.232471  0.464741  0.460853  1.000000 -0.177383  0.374044 -0.507787  \n",
+       "b        0.291512 -0.444413 -0.441808 -0.177383  1.000000 -0.366087  0.333461  \n",
+       "lstat   -0.496996  0.488676  0.543993  0.374044 -0.366087  1.000000 -0.737663  \n",
+       "medv     0.249929 -0.381626 -0.468536 -0.507787  0.333461 -0.737663  1.000000  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
